# Tikiya

./: .gitignore
App_mobile/: README.md  pubspec.yaml
App_mobile/android/app/: build.gradle.kts
App_mobile/ios/Runner.xcodeproj/: project.pbxproj
App_mobile/lib/: main.dart
App_mobile/lib/l10n/: app_ar.arb  app_en.arb  app_fr.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_en.dart  app_localizations_fr.dart
App_mobile/test/: widget_test.dart
App_mobile/web/: index.html
App_mobile/windows/: CMakeLists.txt
App_mobile_organisateur/: .gitignore  pubspec.yaml
App_mobile_organisateur/lib/: main.dart
App_mobile_organisateur/linux/: CMakeLists.txt
App_mobile_organisateur/test/: widget_test.dart
App_mobile_organisateur/web/: manifest.json
back/tikiya_api/: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md
back/tikiya_api/deploy/: nginx.conf  tikiya_api.service
back/tikiya_api/loadtest/: README.md  auth_cycle.js  smoke.js
back/tikiya_api/migrations/: 0002_users.sql  0003_sessions.sql  0004_users_table.sql  0005_user_lockout.sql  0006_schema_guard.sql
back/tikiya_api/src/: config.rs  error.rs  http.rs  main.rs  state.rs
back/tikiya_api/src/db/: mod.rs  pool.rs
back/tikiya_api/src/dto/: mod.rs
back/tikiya_api/src/handlers/: auth.rs  me.rs  mod.rs  oauth.rs
back/tikiya_api/src/middleware/: request_id.rs
back/tikiya_api/src/models/: user.rs
back/tikiya_api/src/routes/: auth.rs  me.rs  mod.rs  oauth.rs
back/tikiya_api/src/security/: oauth_state.rs
back/tikiya_api/src/services/: auth.rs  oauth.rs
(+41 files in other folders)
