[package]
name = "tikiya_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
tower = { version = "0.5", features = ["limit", "load-shed"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "time", "chrono"] }
argon2 = "0.5.3"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3"
validator = { version = "0.18", features = ["derive"] }
base64 = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
tower_governor = "0.6"
